# greenlane-ems-pipelines

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
jobs/: gold_aggregate_job.json  silver_transform_job.json
notebooks/dashboards/: charge_curve_dashboard.py
notebooks/exploration/: 00_inspect_soc_data.py
notebooks/gold/: 01_aggregate_charge_curves.py  02_fit_pwl.py
notebooks/silver/: 00_build_vehicle_reference.py  01_extract_session_timeseries.py  02_clean_and_resample.py
src/ems_pipelines/: pwl_utils.py  schemas.py  soc_utils.py
tests/: test_pwl_utils.py  test_soc_utils.py
